tests/NormalTests/paczka1/fuzzy1/38820773.err
Error in line 11: xImlp9 A526 18,4
Error in line 35: A526 S761 5,3
Error in line 39: xImlp9 A237 32,7
